// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeDefined should return false for {} 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: object
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for 1 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for Date with isNot true 1`] = `
Object {
  "message": "    
    expect value's type not to be Date.
    received: 'object'
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for Symbol() 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for aa 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for asymmetricMatcher of any value that is not Date 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: any(Number)
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for null 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: null
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for undefined 1`] = `
Object {
  "message": "    
    expected should be an date.
    got: undefined
",
  "pass": false,
}
`;
